--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,14 @@
 [phases.setup]
-nixPkgs = ["python312", "python312Packages.pip"]
+nixPkgs = ["python312"]
 
 [phases.install]
-cmds = ["python3.12 -m pip install -r requirements.txt"]
+cmds = [
+  "python3.12 -m ensurepip --upgrade",
+  "python3.12 -m pip install --upgrade pip",
+  "python3.12 -m pip install -r requirements.txt"
+]
 
 [start]
 cmd = "python3.12 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+
 
