--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ pydantic-settings==2.1.0
 email-validator==2.1.0
 
 # OpenAI API
-openai==1.35.0
+openai>=1.51.0
 
 # Web Scraping
 beautifulsoup4==4.12.3
