--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 pydantic>=2.5.0
 email-validator>=2.0.0
+email-validator>=2.0.0
 python-multipart>=0.0.6
 
 # HTTP & Async
